overlaping issue solved

--- a/src/components/companyname/companyname.css
+++ b/src/components/companyname/companyname.css
@@ -149,6 +149,7 @@
         display: flex;
         margin-top: -25px;
         width: 100%;
+        position: relative;
     }
     
     .servicewisesub p {
