--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -7,7 +7,7 @@
         height: 100vh;
     }
     .seconddiv {
-        background-color: #141414;
+        background-color: #232323;
         padding: 10px;
         padding-top: 50px;
         margin-top: 100px;
